Fix the footer section causing overflow in the Outlet

--- a/src/Components/Generic-Layout/Footer/index.css
+++ b/src/Components/Generic-Layout/Footer/index.css
@@ -102,59 +102,57 @@
   padding: 0.5rem;
 }
 
-.footer-terms-center{
+.footer-terms-center {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  font-size: .75rem;
-  padding: .25rem;
+  font-size: 0.75rem;
+  padding: 0.25rem;
   text-align: center;
 }
 
-.footer-terms{
+.footer-terms {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
-.language-select-cont{
+.language-select-cont {
   position: absolute;
   right: 1rem;
   /* padding-bottom: 3rem; */
 }
 
-@media only screen and (width:280px) and (height: 653px) {
-
-  .footer-terms{
+@media only screen and (width: 280px) and (height: 653px) {
+  .footer-terms {
     justify-content: left;
-    align-items:start;
+    align-items: start;
     text-align: left;
   }
 
-  .language-select-cont{
+  .language-select-cont {
     padding-top: 3rem;
   }
-  
 }
 
-@media only screen and (max-width:375px) and (height: 667px){
-  .language-select-cont{
+@media only screen and (max-width: 375px) and (height: 667px) {
+  .language-select-cont {
     padding-top: 2rem;
   }
 }
 
-@media only screen and (max-width:430px) and (max-height: 932px){
-  .language-select-cont{
+@media only screen and (max-width: 430px) and (max-height: 932px) {
+  .language-select-cont {
     padding-top: 2rem;
   }
 }
 
-@media only screen and (min-width: 480px) and (max-width: 1023px) {
+@media only screen and (min-width: 480px) and (max-width: 1210px) {
   .footer-container {
     background-color: #fff;
   }
@@ -164,7 +162,7 @@
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1210px) {
   .footer-container {
     background-color: #fff;
   }
